# TranscritorDeReunioes

./: .gitignore.txt  README.md  TranscritorDeReunioes.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  testLiteLlm.py
agents/: agent_definitions.py  agent_definitions1.py  agent_definitions2.py  agent_definitions3.py  agent_definitions4.py  agent_definitions5.py
data/text/: transcricao.md
data/transcribed_text/: transcricao-v1.md
data/transcriptions/: transcricao-v1.md
data/transcripts/: transcricao.md
docs/: 1-prompt-transcriptor.md  2-processo-detalhado.md  4-agent-definitions-explained.md  processo-detalhado-tecnico.md  readme.md
output/: relatorio_transcricao.md
src/transcritor/agents/: agent_definitions.py  agent_definitions1.py  agent_definitions2.py  agent_definitions3.py  agent_definitions4.py  agent_definitions5.py  agent_definitions6.py
src/transcritor/tasks/: task_definitions.py
src/transcritor/tools/: __init__.py  audio_tools.py  report_tools.py  text_tools.py  toxic_tools.py  transcription_tools.py
tasks/: task_definitions.py
tests/: test_agent_definitions.py  test_audio_tools.py  test_report_tools.py  test_speaker_tools.py  test_task_definitions.py  test_text_tools.py  test_transcription_tools.py
tools/: speaker_tools.py  transcription_tools.py
