[project]
name = "transcritor-reunioes"
version = "0.1.0"
description = "Um projeto para transcrever e analisar reuniões."
authors = [
    {name = "Filipe Maruyama Cardili", email = "filipecardili@gmail.com"},
    {name = "Flavio Eustáquio de oliveira", email = "flaeuso@hotmail.com"},
    {name = "Gabriel Ribeiro", email = "gabrielribeiro@id.uff.br"},
    {name = "Reginaldo Santos", email = "reginaldo.santos@id.uff.br"},
    {name = "Wemerson G. Souza", email = "wemerson.souza@wganalytics.com.br"}
]
license = "MIT"

dependencies = [
    "crewai>=0.83.0",
    "ffmpeg-python>=0.2.0",
    "langchain-openai>=0.2.11",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.1",
    "torch>=2.0.0",
    "pathlib>=1.0.1",
    "requests>=2.31.0",
    "speechrecognition>=3.11.0", # Adicionado
    "faster-whisper>=0.10.0",
    "whisper>=1.1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transcritor"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --cov=src"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
